shellfirm/tests/snapshots/checks__.__tests__checks__fs-move_to_dev_null.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-move_to_dev_null.yaml",
        test: "mv fil@!@#e.txt /dev/null",
        check_detection_ids: [
            "fs:move_to_dev_null",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-move_to_dev_null.yaml",
        test: "mv 1 /dev/null",
        check_detection_ids: [
            "fs:move_to_dev_null",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-move_to_dev_null.yaml",
        test: "mv .",
        check_detection_ids: [],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-move_to_dev_null.yaml",
        test: "mv /dev/null",
        check_detection_ids: [],
        test_description: "missing argument",
    },
]
