shellfirm/tests/snapshots/checks__.__tests__checks__fs-strict:change_permissions.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-strict:change_permissions.yaml",
        test: "chmod -R",
        check_detection_ids: [
            "fs-strict:change_permissions",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-strict:change_permissions.yaml",
        test: "chmod",
        check_detection_ids: [],
        test_description: "chmod without any data",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-strict:change_permissions.yaml",
        test: "chmodd",
        check_detection_ids: [],
        test_description: "chmod name is incurrent",
    },
]
