shellfirm/tests/snapshots/checks__.__tests__checks__fs:recursively_delete.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -rf /",
        check_detection_ids: [
            "fs:recursively_delete",
            "fs-strict:any_deletion",
        ],
        test_description: "delete root path",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -r /",
        check_detection_ids: [
            "fs:recursively_delete",
            "fs-strict:any_deletion",
        ],
        test_description: "delete root path",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -rf *",
        check_detection_ids: [
            "fs:recursively_delete",
            "fs-strict:any_deletion",
        ],
        test_description: "delete all files in current folder",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -fr ..",
        check_detection_ids: [
            "fs:recursively_delete",
            "fs-strict:any_deletion",
        ],
        test_description: "delete parent folder",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -rf ....",
        check_detection_ids: [
            "fs:recursively_delete",
            "fs-strict:any_deletion",
        ],
        test_description: "delete parent folder",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -rf .",
        check_detection_ids: [
            "fs-strict:any_deletion",
        ],
        test_description: "delete with ., invalid command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs:recursively_delete.yaml",
        test: "rm -rf test.txt",
        check_detection_ids: [
            "fs-strict:any_deletion",
        ],
        test_description: "delete with ., invalid command",
    },
]
